Return boolean for the replace method in DOMTokenList

The specification for DOMTokenList's replace() method
which would make it return a boolean.

Indicating true if a token was replaced, and false otherwise.

Bug: 820988

Signed-off-by: Yuhong Sha <yuhong.sha@samsung.com>
Change-Id: I8e500a74a2504e13522c4e85b17d441cd2d4299f
Reviewed-on: https://chromium-review.googlesource.com/965683
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Hayato Ito <hayato@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545018}
Former-commit-id: 2de5a77d724dc3185e39ae7d4adfc2d976ded95c