third_party/WebKit/Source/core/dom/DOMTokenList.h
@@ -56,7 +56,7 @@ class CORE_EXPORT DOMTokenList : public ScriptWrappable {
   void remove(const Vector<String>&, ExceptionState&);
   bool toggle(const AtomicString&, ExceptionState&);
   bool toggle(const AtomicString&, bool force, ExceptionState&);
-  void replace(const AtomicString& token,
+  bool replace(const AtomicString& token,
                const AtomicString& new_token,
                ExceptionState&);
   bool supports(const AtomicString&, ExceptionState&);
